--- a/project.config.json
+++ b/project.config.json
@@ -28,13 +28,25 @@
 			"current": -1,
 			"list": []
 		},
+		"plugin": {
+			"current": -1,
+			"list": []
+		},
 		"game": {
 			"currentL": -1,
 			"list": []
 		},
 		"miniprogram": {
 			"current": -1,
-			"list": []
+			"list": [
+				{
+					"id": 0,
+					"name": "1",
+					"pathName": "pages/mine/mine",
+					"query": "",
+					"scene": "1011"
+				}
+			]
 		}
 	}
 }
