--- a/app.json
+++ b/app.json
@@ -17,7 +17,7 @@
     "backgroundTextStyle": "dark",
     "navigationBarBackgroundColor": "#0A6E92",
     "navigationBarTitleText": "技大生活通",
-    "navigationBarTextStyle": "light",
+    "navigationBarTextStyle": "white",
     "enablePullDownRefresh": true
   },
   "tabBar": {
