详情页面 +其它一些地方的修正 20190209
1.详情页面基本结构已完成，页面数据待传递。（详情页面基于首页修改，数据命名规则和首页的完全一致。同时，还有一个未定义的数据--“还差?人”） 
  分享按钮功能已完成。立即加入按钮未完成（已加入的人显示“你已加入”未加入的显示“立即加入”）


2.首页背景不完整显示修正，图标大小修正，去掉一些没用的元素
3.发布页面的图标拉伸修正

--- a/app.json
+++ b/app.json
@@ -10,8 +10,8 @@
     "pages/mine/publish/publish",
     "pages/mine/information/information",
     "pages/mine/help/help",
-    "pages/helpst/helpst"
-    
+    "pages/helpst/helpst",
+    "pages/share/share"
   ],
   "window": {
     "backgroundTextStyle": "dark",
