录入界面，注册界面
1.录入界面
2.注册界面
3.其它许多小地方的优化，

--- a/app.json
+++ b/app.json
@@ -11,7 +11,10 @@
     "pages/mine/information/information",
     "pages/mine/help/help",
     "pages/helpst/helpst",
-    "pages/share/share"
+    "pages/share/share",
+    "pages/pre-register/pre-register"
+  
+
   ],
   "window": {
     "backgroundTextStyle": "dark",
